syntax = "proto2";

package muthu.other;

message ChannelMetadata {
    // Channel Title
    optional string title = 1;

    // Channel Description
    optional string description = 2;

    // Wether to display channel to the public
    optional bool is_public = 3;

    // ISO_639-1 Language [Code](https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes)
    optional string language = 4;

    // index into external [assets array](#.Assets)
    optional uint32 cover_photo = 5;
    // index into external [assets array](#.Assets)
    optional uint32 avatar_photo  = 6;

    // Channel Category Id
    optional uint64 category = 7;
}

message ChannelCategoryMetadata {
    // Category Name
    optional string name = 1;
}

/// Content parameters for the asset to be uploaded
message Upload {    
    optional uint64 content_id = 1;
    optional uint64 type_id = 2;
    optional uint64 size = 3;
    optional bytes ipfs_content_id = 4;
}

/// Represents multiple urls
message Urls {
    repeated bytes urls = 1;
}

/// Specifies how a new asset will be provided on creating and updating
message NewAssetMetadata {
    oneof new_asset {
        /// Upload to the storage system
        Upload upload = 1;
        /// Multiple url strings pointing at an asset
        Urls urls = 2;
    }
}

/// Represents an array of new assets metadata
message AssetsMetadata {
    repeated NewAssetMetadata new_asset = 1;
}

message ChannelCreationParametersMetadata {
    /// Assets referenced by metadata
    optional AssetsMetadata assets = 1;
    /// Metadata about the channel.
    optional ChannelMetadata meta = 2;
    /// Reward account.
    optional bytes reward_account = 3;
}